[gd_scene load_steps=10 format=3 uid="uid://copix8mgh0ad6"]

[ext_resource type="Script" path="res://blocchi_instabili.gd" id="1_5jmt0"]
[ext_resource type="Texture2D" uid="uid://dxrdvidr1vtfs" path="res://sprite/science lab/Tiles/tile077.png" id="2_dn458"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0hq6"]
size = Vector2(32, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_sqk54"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dn458")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2hi1"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_qjc7p"]
length = 0.001

[sub_resource type="Animation" id="Animation_htlb6"]
resource_name = "breaking_tile"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("platform/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.8, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 0, 1), Color(0.822179, 0.688533, 0.0547572, 1), Color(1, 0.580392, 0, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_0fqoa"]
resource_name = "new_animation"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yb8w7"]
_data = {
"RESET": SubResource("Animation_qjc7p"),
"breaking_tile": SubResource("Animation_htlb6"),
"new_animation": SubResource("Animation_0fqoa")
}

[node name="Node2D" type="Node2D"]
position = Vector2(-16, -16)
script = ExtResource("1_5jmt0")

[node name="BlocchiInstabili" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlocchiInstabili"]
position = Vector2(16, 0)
shape = SubResource("RectangleShape2D_f0hq6")

[node name="platform" type="StaticBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(16, 16)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="platform"]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0.992157, 0, 1)
sprite_frames = SubResource("SpriteFrames_sqk54")

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform"]
visible = false
shape = SubResource("RectangleShape2D_d2hi1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="platform"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_yb8w7")
}

[connection signal="body_entered" from="BlocchiInstabili" to="." method="_on_blocchi_instabili_body_entered"]
[connection signal="body_exited" from="BlocchiInstabili" to="." method="_on_blocchi_instabili_body_exited"]
[connection signal="animation_finished" from="platform/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
